[0.2.x] added : typedVar class
git-svn-id: https://pykd.svn.codeplex.com/svn@78536 9b283d60-5439-405e-af05-b73fd8c4d996

--- a/pykd/pykd_2008.vcproj
+++ b/pykd/pykd_2008.vcproj
@@ -410,11 +410,19 @@
 				</FileConfiguration>
 			</File>
 			<File
+				RelativePath=".\typedvar.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\typeinfo.cpp"
 				>
 			</File>
 			<File
 				RelativePath=".\udtutils.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\vardata.cpp"
 				>
 			</File>
 		</Filter>
@@ -460,11 +468,19 @@
 				>
 			</File>
 			<File
+				RelativePath=".\typedvar.h"
+				>
+			</File>
+			<File
 				RelativePath=".\typeinfo.h"
 				>
 			</File>
 			<File
 				RelativePath=".\udtutils.h"
+				>
+			</File>
+			<File
+				RelativePath=".\vardata.h"
 				>
 			</File>
 		</Filter>
