[0.2.x] added : disasm class
git-svn-id: https://pykd.svn.codeplex.com/svn@78578 9b283d60-5439-405e-af05-b73fd8c4d996

--- a/pykd/pykd_2008.vcproj
+++ b/pykd/pykd_2008.vcproj
@@ -366,6 +366,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\disasm.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\module.cpp"
 				>
 			</File>
@@ -452,6 +456,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\disasm.h"
+				>
+			</File>
+			<File
+				RelativePath=".\disasmengine.h"
+				>
+			</File>
+			<File
 				RelativePath=".\module.h"
 				>
 			</File>
@@ -505,6 +517,10 @@
 		<Filter
 			Name="win"
 			>
+			<File
+				RelativePath=".\win\dbgasm.cpp"
+				>
+			</File>
 			<File
 				RelativePath=".\win\dbgeng.cpp"
 				>
