--- a/pykd/pykd_2008.vcproj
+++ b/pykd/pykd_2008.vcproj
@@ -418,6 +418,10 @@
 				</FileConfiguration>
 			</File>
 			<File
+				RelativePath=".\stkframe.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\typedvar.cpp"
 				>
 			</File>
@@ -477,6 +481,10 @@
 			</File>
 			<File
 				RelativePath=".\stdafx.h"
+				>
+			</File>
+			<File
+				RelativePath=".\stkframe.h"
 				>
 			</File>
 			<File
