[0.2.x] added : loadDump, isKernelDebugging, isDumpAnalyzing routines
git-svn-id: https://pykd.svn.codeplex.com/svn@78810 9b283d60-5439-405e-af05-b73fd8c4d996

--- a/pykd/pykd_2008.vcproj
+++ b/pykd/pykd_2008.vcproj
@@ -370,6 +370,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\localvar.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\module.cpp"
 				>
 			</File>
@@ -465,6 +469,10 @@
 			</File>
 			<File
 				RelativePath=".\disasmengine.h"
+				>
+			</File>
+			<File
+				RelativePath=".\localvar.h"
 				>
 			</File>
 			<File
