[0.2.x] added : windbg commands
git-svn-id: https://pykd.svn.codeplex.com/svn@78848 9b283d60-5439-405e-af05-b73fd8c4d996

--- a/pykd/pykd_2008.vcproj
+++ b/pykd/pykd_2008.vcproj
@@ -366,6 +366,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\win\dbgpath.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\disasm.cpp"
 				>
 			</File>
@@ -464,6 +468,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\win\dbgpath.h"
+				>
+			</File>
+			<File
 				RelativePath=".\disasm.h"
 				>
 			</File>
@@ -546,11 +554,23 @@
 				>
 			</File>
 			<File
+				RelativePath=".\win\dbgio.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\win\dbgio.h"
+				>
+			</File>
+			<File
 				RelativePath=".\win\memory.cpp"
 				>
 			</File>
 			<File
 				RelativePath=".\win\utils.h"
+				>
+			</File>
+			<File
+				RelativePath=".\win\windbg.h"
 				>
 			</File>
 		</Filter>
