[0.2.x] added : setBp routine
git-svn-id: https://pykd.svn.codeplex.com/svn@78898 9b283d60-5439-405e-af05-b73fd8c4d996

--- a/pykd/pykd_2008.vcproj
+++ b/pykd/pykd_2008.vcproj
@@ -350,6 +350,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\bpoint.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\cpureg.cpp"
 				>
 			</File>
@@ -451,6 +455,10 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\bpoint.h"
+				>
+			</File>
 			<File
 				RelativePath=".\cpureg.h"
 				>
