--- a/pykd/pykd_2008.vcproj
+++ b/pykd/pykd_2008.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="windows-1251"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9.00"
+	Version="9,00"
 	Name="pykd"
 	ProjectGUID="{FE961905-666F-4908-A212-961465F46F13}"
 	RootNamespace="pykd"
@@ -386,6 +386,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\eventhandler.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\localvar.cpp"
 				>
 			</File>
@@ -497,6 +501,10 @@
 			</File>
 			<File
 				RelativePath=".\disasmengine.h"
+				>
+			</File>
+			<File
+				RelativePath=".\eventhandler.h"
 				>
 			</File>
 			<File
