[0.2.x] fixed: build fix
git-svn-id: https://pykd.svn.codeplex.com/svn@82051 9b283d60-5439-405e-af05-b73fd8c4d996

--- a/pykd/pykd_2008.vcproj
+++ b/pykd/pykd_2008.vcproj
@@ -625,6 +625,10 @@
 				RelativePath=".\dia\diawrapper.h"
 				>
 			</File>
+			<File
+				RelativePath=".\dia\symexport.cpp"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="python"
