--- a/pykd/pykd_2008.vcproj
+++ b/pykd/pykd_2008.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="windows-1251"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9,00"
+	Version="9.00"
 	Name="pykd"
 	ProjectGUID="{FE961905-666F-4908-A212-961465F46F13}"
 	RootNamespace="pykd"
@@ -442,6 +442,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\symsessioncache.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\typedvar.cpp"
 				>
 			</File>
@@ -528,6 +532,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\symsessioncache.h"
+				>
+			</File>
+			<File
 				RelativePath=".\typedvar.h"
 				>
 			</File>
@@ -579,6 +587,10 @@
 			</File>
 			<File
 				RelativePath=".\win\dbgio.h"
+				>
+			</File>
+			<File
+				RelativePath=".\win\dbgmod.cpp"
 				>
 			</File>
 			<File
