[0.2.x] ~ dia files refactoring
git-svn-id: https://pykd.svn.codeplex.com/svn@83439 9b283d60-5439-405e-af05-b73fd8c4d996

--- a/pykd/pykd_2008.vcproj
+++ b/pykd/pykd_2008.vcproj
@@ -626,15 +626,35 @@
 				>
 			</File>
 			<File
+				RelativePath=".\dia\diadecls.h"
+				>
+			</File>
+			<File
+				RelativePath=".\dia\diaexcept.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\dia\diaexcept.h"
+				>
+			</File>
+			<File
 				RelativePath=".\dia\diaload.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\dia\diawrapper.cpp"
+				RelativePath=".\dia\diasession.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\dia\diawrapper.h"
+				RelativePath=".\dia\diasession.h"
+				>
+			</File>
+			<File
+				RelativePath=".\dia\diasymbol.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\dia\diasymbol.h"
 				>
 			</File>
 			<File
