--- a/test/targetapp/targetapp.vcproj
+++ b/test/targetapp/targetapp.vcproj
@@ -610,6 +610,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\scripts\mspdbtest.py"
+				>
+			</File>
+			<File
 				RelativePath="..\scripts\pykdtest.py"
 				>
 			</File>
