[0.2.x]  ~ workitem/11723: find symbol by name ("public" pdb)  - enum types by mask
git-svn-id: https://pykd.svn.codeplex.com/svn@83473 9b283d60-5439-405e-af05-b73fd8c4d996

--- a/pykd/pykd_2008.vcproj
+++ b/pykd/pykd_2008.vcproj
@@ -642,6 +642,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\dia\diapubsymcache.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\dia\diapubsymcache.h"
+				>
+			</File>
+			<File
 				RelativePath=".\dia\diasession.cpp"
 				>
 			</File>
