[0.3.x] added numVariant class
git-svn-id: https://pykd.svn.codeplex.com/svn@83703 9b283d60-5439-405e-af05-b73fd8c4d996

--- a/pykd/pykd.vcxproj
+++ b/pykd/pykd.vcxproj
@@ -125,6 +125,7 @@
   <ItemGroup>
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="variant.h" />
     <ClInclude Include="windbgext.h" />
   </ItemGroup>
   <ItemGroup>
