--- a/pykd/pykd.vcxproj
+++ b/pykd/pykd.vcxproj
@@ -123,7 +123,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="module.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="target.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="variant.h" />
     <ClInclude Include="windbgext.h" />
@@ -146,6 +148,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug_2.7|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="target.cpp" />
     <ClCompile Include="windbgext.cpp" />
   </ItemGroup>
   <ItemGroup>
