[0.3.x] added typeInfo and typedVar classes
git-svn-id: https://pykd.svn.codeplex.com/svn@83754 9b283d60-5439-405e-af05-b73fd8c4d996

--- a/pykd/pykd.vcxproj
+++ b/pykd/pykd.vcxproj
@@ -130,6 +130,8 @@
     <ClInclude Include="stladaptor.h" />
     <ClInclude Include="target.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="typedvar.h" />
+    <ClInclude Include="typeinfo.h" />
     <ClInclude Include="variant.h" />
     <ClInclude Include="windbgext.h" />
   </ItemGroup>
