[0.3.x] branch : km/samples
git-svn-id: https://pykd.svn.codeplex.com/svn@85158 9b283d60-5439-405e-af05-b73fd8c4d996

--- a/pykd/pykd.vcxproj
+++ b/pykd/pykd.vcxproj
@@ -272,6 +272,7 @@
       </PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="eventhandler.cpp" />
+    <ClCompile Include="memaccess.cpp" />
     <ClCompile Include="pymod.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
