[0.3.x] added : !py command commandline arguments ( -g -l -h )
git-svn-id: https://pykd.svn.codeplex.com/svn@86005 9b283d60-5439-405e-af05-b73fd8c4d996

--- a/pykd/pykd.vcxproj.filters
+++ b/pykd/pykd.vcxproj.filters
@@ -54,6 +54,12 @@
     <ClInclude Include="cpucontext.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="pydbgio.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="pystate.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
