--- a/pykd/pykd.vcxproj
+++ b/pykd/pykd.vcxproj
@@ -239,6 +239,8 @@
     <ClInclude Include="eventhandler.h" />
     <ClInclude Include="memaccess.h" />
     <ClInclude Include="module.h" />
+    <ClInclude Include="pydbgio.h" />
+    <ClInclude Include="pystate.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="stladaptor.h" />
     <ClInclude Include="targetver.h" />
