--- a/pykd/pykd.vcxproj.filters
+++ b/pykd/pykd.vcxproj.filters
@@ -27,43 +27,49 @@
     <ClInclude Include="variant.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="module.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="dbgexcept.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="stladaptor.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="memaccess.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="typeinfo.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="typedvar.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="dbgengine.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="eventhandler.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="cpucontext.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="pydbgio.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="pystate.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="resource.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="pykdver.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="pysymengine.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="pythreadstate.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="pydbgeng.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="pymemaccess.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="pytypeinfo.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="pytypedvar.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="pycpucontext.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="pymodule.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="pyeventhandler.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="pydisasm.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -83,16 +89,25 @@
     <ClCompile Include="dbgexcept.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="dbgengine.cpp">
+    <ClCompile Include="pydbgeng.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="eventhandler.cpp">
+    <ClCompile Include="pymemaccess.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="cpucontext.cpp">
+    <ClCompile Include="pytypeinfo.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="memaccess.cpp">
+    <ClCompile Include="pytypedvar.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="pycpucontext.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="pymodule.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="pyeventhandler.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
