[0.3.x] added : getLastEvent getLastException routines
git-svn-id: https://pykd.svn.codeplex.com/svn@87129 9b283d60-5439-405e-af05-b73fd8c4d996

--- a/pykd/pykd.vcxproj
+++ b/pykd/pykd.vcxproj
@@ -239,6 +239,7 @@
     <ClInclude Include="pydbgeng.h" />
     <ClInclude Include="pydbgio.h" />
     <ClInclude Include="pyeventhandler.h" />
+    <ClInclude Include="pyevents.h" />
     <ClInclude Include="pykdver.h" />
     <ClInclude Include="pymemaccess.h" />
     <ClInclude Include="pymodule.h" />
