--- a/pykd/pykd.vcxproj.filters
+++ b/pykd/pykd.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClInclude Include="pydisasm.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="pyevents.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
